# cpp-ox-game

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: common-cxx-flags.cmake
include/: ox.h
src/: main.cc
test/: ox.cc
